some improvements for java 8